--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME="Impact Web 360"
 APP_ENV=production
-APP_KEY=
+APP_KEY=base64:gM6tkop6Bgqm19PRHyFSiOVB6uOpr94xa09ykDLKRQs=
 APP_DEBUG=false
 APP_URL=http://localhost
 
