--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
 APP_NAME="Impact Web 360"
-APP_ENV=production
-APP_KEY=base64:mxnlRLSDrQSkOVaQyWqy0z8wX2/fBhUsTlpD+ctY3D4=
-APP_DEBUG=false
-APP_URL=http://localhost
+APP_ENV=local
+APP_KEY=
+APP_DEBUG=true
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=error
+LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -28,11 +28,11 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_MAILER=log
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
@@ -66,4 +66,4 @@ FEDAPAY_ENVIRONMENT=test
 # Configuration Moneroo
 MONEROO_PUBLIC_KEY=
 MONEROO_SECRET_KEY=
-MONEROO_ENVIRONMENT=test 
+MONEROO_ENVIRONMENT=test
