--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "cloudinary-labs/cloudinary-laravel": "^2.3",
         "fedapay/fedapay-php": "^0.4.7",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
