--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "abraham-flutterwave/laravel-payment": "^2.1",
         "cloudinary-labs/cloudinary-laravel": "^2.3",
         "fedapay/fedapay-php": "^0.4.7",
+        "flutterwavedev/flutterwave-v3": "^1.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
