--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "abraham-flutterwave/laravel-payment": "^2.1",
+        "barryvdh/laravel-dompdf": "^3.1",
         "cloudinary-labs/cloudinary-laravel": "^2.3",
         "fedapay/fedapay-php": "^0.4.7",
         "flutterwavedev/flutterwave-v3": "^1.1",
@@ -17,7 +18,9 @@
         "laravel/socialite": "^5.21",
         "laravel/tinker": "^2.8",
         "mcamara/laravel-localization": "^2.0",
-        "moneroo/moneroo-laravel": "^0.1.2"
+        "moneroo/moneroo-laravel": "^0.1.2",
+        "mpdf/mpdf": "^8.2",
+        "simplesoftwareio/simple-qrcode": "^4.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -69,6 +72,6 @@
             "php-http/discovery": true
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true
 }
